runfix: prevent overlapping added users

--- a/src/style/components/search-input.less
+++ b/src/style/components/search-input.less
@@ -19,7 +19,6 @@
 
 .search-outer {
   overflow: hidden;
-  min-height: 48px;
   padding: 0 12px;
 }
 
